--- a/sass/main.css
+++ b/sass/main.css
@@ -11,8 +11,25 @@ body {
 aside {
   display: none; }
 
-.dot-container.active .dot {
-  background-color: black; }
+.dot-container {
+  display: none; }
+  .dot-container.active .dot, .dot-container:hover .dot {
+    background-color: black; }
+  .dot-container.active span, .dot-container:hover span {
+    transform: translateX(0);
+    opacity: 1; }
+  .dot-container span {
+    display: inline-block;
+    font-weight: bold;
+    color: #2F2E2E;
+    text-transform: uppercase;
+    margin-top: 3px;
+    transform: translateX(30px);
+    opacity: 0;
+    transition: opacity 0.2s, transform 1s;
+    font-size: 1rem;
+    position: absolute;
+    right: 61px; }
 
 .container {
   max-width: 950px;
@@ -270,7 +287,8 @@ footer {
     top: 300px;
     z-index: 999; }
     aside .dot-container {
-      list-style-type: none; }
+      list-style-type: none;
+      display: block; }
       aside .dot-container .dot {
         width: 12px;
         height: 12px;
@@ -279,12 +297,6 @@ footer {
         display: inline-block;
         font-weight: bold;
         margin: 0 30px 0 15px; }
-      aside .dot-container p {
-        display: inline-block;
-        width: 60px;
-        font-size: 1rem;
-        margin: 5px;
-        text-align: right; }
       aside .dot-container a {
         text-decoration: none; }
 
@@ -498,7 +510,8 @@ footer {
     top: 160px;
     z-index: 999; }
     aside .dot-container {
-      list-style-type: none; }
+      list-style-type: none;
+      display: block; }
       aside .dot-container .dot {
         width: 12px;
         height: 12px;
@@ -507,12 +520,6 @@ footer {
         display: inline-block;
         font-weight: bold;
         margin: 0 30px 0 15px; }
-      aside .dot-container p {
-        display: inline-block;
-        width: 60px;
-        font-size: 1rem;
-        margin: 5px;
-        text-align: right; }
       aside .dot-container a {
         text-decoration: none; }
 
