--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,3 +10,9 @@ $active-color: grey;
 $container-width: 950px;
 
 $common-padding: 30px;
+
+
+$screen-x-large: 1176px;
+$screen-large: 768px;
+$screen-medium: 600px;
+$screen-small: 440px;
