--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,992 +1,13 @@
-@import "mixins";
+@import "base";
 @import "variables";
+@import "components/main-menu";
+@import "components/contact";
+@import "components/review";
+@import "components/about";
+@import "components/menus";
+@import "components/video";
+@import "components/slider";
+@import "components/aside-menu";
+@import "components/footer";
 
-* {
-  box-sizing: border-box;
-}
 
-body {
-
-  font: {
-    family: $main-font-family;
-    size: 18px;
-  }
-
-  font-family: $main-font-family;
-  color: $text-color;
-  margin: 0;
-}
-
-aside {
-  display: none;
-}
-
-.dot-container {
-  display: none;
-  &.active,
-  &:hover {
-    .dot {
-      background-color: black;
-    }
-    span {
-      transform: translateX(0);
-      opacity: 1;
-
-    }
-  }
-  span {
-    display: inline-block;
-    font-weight: bold;
-    color: $text-color;
-    text-transform: uppercase;
-    margin-top: 3px;
-    transform: translateX(30px);
-    opacity: 0;
-    transition: opacity 0.2s, transform 1s;
-    font-size: 1rem;
-    position: absolute;
-    right: 61px;
-  }
-}
-
-.container {
-  max-width: $container-width;
-  margin: auto;
-  margin-bottom: $common-padding/2;
-}
-
-.container-main-menu {
-  margin-bottom: $common-padding/6;
-  margin-top: $common-padding;
-}
-
-header {
-  display: inline-block;
-
-  font: {
-    weight: bold;
-    style: italic;
-    size: 1.4rem;
-    family: $additional-font-family;
-  }
-
-  a {
-    text-decoration: none;
-    color: $text-color;
-  }
-
-  sup {
-    font-weight: normal;
-  }
-
-  .fa {
-    font-size: 0.7rem;
-  }
-}
-
-.icon-header {
-  display: inline-block;
-  padding-left: $common-padding/3;
-  vertical-align: bottom;
-  margin-bottom: -$common-padding/10;
-}
-
-.main-menu {
-
-  ul {
-    display: inline-block;
-    font-family: $additional-font-family;
-    margin-bottom: 0;
-
-    li {
-      display: inline-block;
-
-      a {
-        text-decoration: none;
-        color: $text-color;
-        font-size: 1rem;
-        padding: $common-padding/10;
-
-        &:hover {
-          color: $active-color;
-        }
-      }
-    }
-  }
-}
-
-.main-menu {
-
-  .menu {
-    display: none;
-  }
-
-  button.menu {
-    display: inline-block;
-    float: right;
-    border: 1px solid $text-color;
-    border-radius: 3px;
-    background: none;
-    padding: $common-padding/3 $common-padding/2;
-    margin-right: $common-padding/2;
-  }
-
-  .small-menu {
-    text-align: right;
-    margin-right: $common-padding/2;
-    margin-top: $common-padding/2;
-    border-top: 1px solid $text-color;
-  }
-}
-
-.small-menu {
-
-  .small-menu--menu {
-    display: inline-block;
-    padding-left: 0;
-    float: left;
-  }
-}
-
-.invisible {
-  display: none;
-}
-
-.icons {
-  display: none;
-  margin-top: $common-padding/3;
-
-  .icon {
-    display: inline-block;
-    font-size: 1.4rem;
-
-    a {
-      text-decoration: none;
-      color: $text-color;
-      padding: $common-padding/3;
-    }
-  }
-}
-
-.title-container {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  .title {
-    color: white;
-    font: {
-      family: $additional-font-family;
-      size: 1.1rem;
-    }
-    text-transform: uppercase;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    .double-line {
-      border-color: white;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      margin-top: $common-padding/2;
-    }
-  }
-
-}
-
-.menus {
-  text-align: center;
-}
-
-.menu-information {
-  font-size: 0.9rem;
-  border-bottom: 1px solid $text-color;
-  padding: 0 $common-padding/2;
-
-  .menu-img {
-    padding-top: $common-padding;
-  }
-
-  .double-line {
-    margin: auto;
-  }
-
-  a {
-    text-decoration: none;
-    color: $text-color;
-  }
-}
-
-.video-container {
-  position: relative;
-  text-align: center;
-  width: 100%;
-
-  video {
-    width: 100%;
-    display: block;
-  }
-}
-
-.double-line {
-  border-top: 2px solid $text-color;
-  border-bottom: 2px solid $text-color;
-  height: 10px;
-  width: 40px;
-}
-
-h1,
-p {
-  color: $text-color;
-}
-
-h1 {
-  font-family: $additional-font-family;
-  font-weight: 100;
-}
-
-.chef-img {
-  background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg");
-  height: 200px;
-  background-size: cover;
-}
-
-.about {
-  font-size: 0.9rem;
-  padding: $common-padding/2;
-
-  p {
-    padding-top: $common-padding/2;
-  }
-}
-
-.second-menu {
-  text-align: center;
-
-  .second-menu-information {
-    padding: 0 $common-padding/2;
-  }
-
-  .double-line {
-    margin: $common-padding/2 auto;
-  }
-
-  h2 {
-    margin: $common-padding 0 0 0;
-  }
-
-  p {
-    font-size: 1rem;
-    margin: $common-padding/6;
-  }
-
-  button {
-    border: 1px solid $text-color;
-    background: none;
-    padding: $common-padding/3 $common-padding;
-    margin: $common-padding/2 0;
-  }
-}
-
-.second-menu-img {
-  background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_320,h_267,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-  background-size: cover;
-  height: 300px;
-}
-
-.review {
-  text-align: center;
-  font-size: 1.2rem;
-  padding: $common-padding/2;
-
-  h2, p {
-    font: {
-      family: $additional-font-family;
-      weight: normal;
-    }
-    margin: $common-padding/10;
-  }
-}
-
-img.round-face {
-  border-radius: 50%;
-  padding: 10px;
-  border: 1px solid $active-color;
-  margin: $common-padding/2;
-}
-
-img.quotation {
-  width: 50px;
-  margin: $common-padding;
-}
-
-.review-image {
-  img {
-    width: 100%;
-  }
-}
-
-.contact {
-  text-align: center;
-  padding: $common-padding/2;
-
-  .double-line {
-    margin: $common-padding auto;
-  }
-
-  p {
-    font-size: 0.9rem;
-  }
-  h3 {
-    font-size: 1.1rem;
-    padding: 0 $common-padding*2;
-  }
-}
-
-#personal-details {
-  input,
-  textarea {
-    display: block;
-    margin: $common-padding/5 auto;
-    padding: $common-padding/10;
-  }
-
-  textarea {
-    padding-right: $common-padding;
-  }
-
-  button {
-    background-color: black;
-    border: none;
-    color: white;
-    font-size: 0.9rem;
-    padding: 6px;
-    margin-top: 0;
-  }
-
-  input[type=text],
-  input[type=email],
-  textarea {
-    width: 300px;
-  }
-}
-
-.slider {
-  display: none;
-}
-
-.small-screen-slide {
-  img {
-    width: 100%;
-  }
-}
-
-footer {
-  text-align: center;
-  margin: $common-padding/2 0;
-  padding: $common-padding/2;
-
-  .icons {
-    float: none;
-    display: inline-block;
-  }
-
-  h3 {
-    display: inline-block;
-    font-family: $additional-font-family;
-    padding-left: $common-padding;
-  }
-
-  p {
-    margin: 0;
-    font-size: 0.9rem;
-  }
-
-  .up-icon {
-    margin: $common-padding 0 $common-padding/2 0;
-  }
-
-  a {
-    text-decoration: none;
-    color: $text-color;
-    font-weight: 600;
-  }
-}
-
-@media screen and (min-width: 769px) {
-  aside {
-    display: block;
-    position: fixed;
-    right: 0;
-    top: 300px;
-    z-index: 999;
-
-    .dot-container {
-      list-style-type: none;
-      display: block;
-
-      .dot {
-        width: 12px;
-        height: 12px;
-        border: 2px solid black;
-        border-radius: 50%;
-        display: inline-block;
-        font-weight: bold;
-        margin: 0 $common-padding 0 $common-padding/2;
-      }
-      a {
-        text-decoration: none;
-      }
-    }
-  }
-
-  .main-menu {
-
-    .menu {
-      display: inline-block;
-    }
-
-    ul {
-      padding-left: $common-padding*2;
-
-      li {
-
-        a {
-          padding: $common-padding/2;
-        }
-      }
-    }
-  }
-
-  .icons {
-    display: inline-block;
-    float: right;
-  }
-
-  .video-container {
-    max-height: 850px;
-    overflow: hidden;
-    position: relative;
-  }
-
-  .title-container {
-    .title {
-      font-size: 2.5rem
-    }
-  }
-
-  .main-menu {
-
-    button.menu {
-      display: none;
-    }
-
-    .small-menu {
-      border-color: transparent;
-    }
-  }
-
-  .small-menu {
-
-    .small-menu--menu,
-    .small-menu--icons {
-      display: none;
-    }
-  }
-
-  .container-main-menu {
-    margin-bottom: $common-padding;
-  }
-
-  .restaurant-menus {
-    .container {
-      padding-top: $common-padding*4;
-    }
-  }
-
-  .about-container {
-    height: 600px;
-  }
-
-  .about {
-    font-size: 1.2rem;
-    width: 50%;
-    max-width: 512px;
-    padding: $common-padding*3 0 0 $common-padding*2;
-    display: inline-block;
-  }
-
-  .chef-img {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg");
-    width: 50%;
-    background-size: cover;
-    background-position: 90%;
-    height: 600px;
-    display: inline-block;
-    float: left;
-  }
-
-  .restaurant-menus {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg");
-    background-size: cover;
-    height: 800px;
-    width: 100%;
-  }
-
-  .menus {
-    text-align: center;
-  }
-
-  .menu-information {
-    border-color: transparent;
-    font-size: 1.1rem;
-    display: inline-block;
-    background-color: white;
-    width: 30%;
-    text-align: center;
-    margin: $common-padding/3;
-
-    img {
-      height: 185px;
-    }
-
-    a {
-      text-decoration: none;
-      color: $text-color;
-    }
-
-    .double-line {
-      margin: auto;
-    }
-
-    h3:last-child {
-      padding: 0 $common-padding*2;
-    }
-
-    p {
-      padding-top: $common-padding;
-    }
-  }
-
-  .menu-img {
-    padding-top: $common-padding*2;
-  }
-
-  .second-menu {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-    text-align: center;
-    overflow: hidden;
-    padding-top: $common-padding*4;
-    height: 867px;
-
-    & .container {
-      width: $container-width/2;
-    }
-
-    button {
-      background: none;
-      border: 1px solid $text-color;
-      padding: $common-padding/2 $common-padding;
-      margin: $common-padding*2 0;
-    }
-    .second-menu-information {
-      background-color: white;
-
-      h2 {
-        padding-top: $common-padding*3;
-        font-size: 2.2rem;
-      }
-      p {
-        margin: $common-padding/6;
-        font-size: 1rem;
-      }
-      h3 {
-        padding: 0 $common-padding*3;
-      }
-    }
-    .double-line {
-      margin: $common-padding auto;
-    }
-
-    .second-menu-img {
-      display: none;
-    }
-  }
-
-  .review {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_6ae16d26be03488a93c6c91e40313df7.jpg/v1/fill/w_1863,h_740,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_6ae16d26be03488a93c6c91e40313df7.jpg");
-    height: 740px;
-    text-align: center;
-    font-size: 1.5rem;
-
-    & .container {
-      padding-top: $common-padding*4;
-    }
-
-    p {
-      font-size: 1rem;
-    }
-    h2, p {
-      font: {
-        family: $additional-font-family;
-        weight: normal;
-      }
-      margin: $common-padding/10;
-    }
-  }
-
-  img.round-face {
-    border-radius: 50%;
-    border: 1px solid $active-color;
-    padding: 10px;
-    margin: $common-padding;
-  }
-  img.quotation {
-    margin-bottom: $common-padding;
-  }
-
-  .review-image {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
-    height: 664px;
-
-    img {
-      display: none;
-    }
-  }
-
-  .contact {
-    text-align: center;
-    font-family: $additional-font-family;
-    padding: $common-padding/2;
-    margin-top: $common-padding*4;
-    margin-bottom: $common-padding*4;
-
-    .double-line {
-      margin: $common-padding auto;
-    }
-
-    h2 {
-      font: {
-        size: 3.3rem;
-        weight: normal;
-      }
-      margin: 0;
-    }
-
-    p {
-      font: {
-        size: 1rem;
-        family: $main-font-family;
-      }
-    }
-
-    h3 {
-      font-weight: normal;
-      padding: 0 $common-padding*6;
-      margin-bottom: $common-padding;
-    }
-  }
-
-  #personal-details {
-    input,
-    textarea,
-    button {
-      display: block;
-      margin: $common-padding/5 auto;
-      padding: $common-padding/10;
-      font-size: 1.2rem;
-      border: 1px solid $text-color;
-    }
-
-    ::placeholder {
-      color: lightgrey;
-    }
-    textarea {
-      padding-right: $common-padding/5;
-    }
-
-    button {
-      background-color: black;
-      color: white;
-      font-size: 1rem;
-      padding: 6px;
-      margin-top: 0;
-      margin-left: calc(50% + 239px);
-    }
-
-    input[type=text],
-    input[type=email],
-    textarea {
-      width: 580px;
-    }
-  }
-
-  .bx-wrapper {
-    border: none;
-
-    .bx-pager {
-    }
-  }
-  .slider {
-    display: block;
-    .slide {
-      img {
-      }
-    }
-  }
-
-  .small-screen-slide {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1176px) {
-  .slider {
-    display: block;
-    .slide {
-      img {
-        width: 420px;
-      }
-    }
-  }
-
-  .small-screen-slide {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 601px) and (max-width: 768px) {
-  aside {
-    display: block;
-    position: fixed;
-    right: 0;
-    top: 160px;
-    z-index: 999;
-
-    .dot-container {
-      list-style-type: none;
-      display: block;
-
-      .dot {
-        width: 12px;
-        height: 12px;
-        border: 2px solid black;
-        border-radius: 50%;
-        display: inline-block;
-        font-weight: bold;
-        margin: 0 $common-padding 0 $common-padding/2;
-      }
-      a {
-        text-decoration: none;
-      }
-    }
-  }
-
-  .main-menu {
-    .menu {
-      display: inline-block;
-    }
-
-    ul {
-      padding-left: $common-padding*2;
-
-      li {
-
-        a {
-          padding: $common-padding/3;
-        }
-      }
-    }
-  }
-
-  .small-menu {
-    .small-menu--menu {
-      display: none;
-    }
-  }
-
-  .main-menu {
-    button.menu {
-      margin-top: $common-padding/3;
-    }
-  }
-
-  .container {
-    margin-bottom: 0;
-  }
-
-  .container-main-menu {
-    margin-bottom: $common-padding;
-  }
-
-  .title-container {
-    .title {
-      font-size: 1.8rem
-    }
-  }
-
-  .chef-img {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg");
-    height: 330px;
-    background-size: cover;
-  }
-
-  .about {
-    font-size: 1.2rem;
-    padding: $common-padding;
-
-    p {
-      padding-top: $common-padding;
-    }
-  }
-
-  .menus {
-    text-align: center;
-  }
-
-  .menu-information {
-    font-size: 1.2rem;
-    padding: 0 $common-padding*3;
-    margin: $common-padding/3;
-    border-bottom: 1px solid $text-color;
-
-    .double-line {
-      margin: auto;
-    }
-
-    a {
-      text-decoration: none;
-      color: $text-color;
-    }
-  }
-
-  .menu-img {
-    padding-top: $common-padding;
-  }
-
-  .second-menu {
-    text-align: center;
-
-    button {
-      background: none;
-      border: 1px solid $text-color;
-      padding: $common-padding/2 $common-padding;
-      margin: $common-padding 0;
-    }
-
-    .double-line {
-      margin: $common-padding auto;
-    }
-
-    .second-menu-information {
-      p {
-        font-size: 0.9rem;
-        margin: $common-padding/6;
-      }
-    }
-  }
-  .second-menu-img {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-    background-size: cover;
-    height: 500px;
-  }
-
-  .review-image {
-    img {
-      width: 100%;
-    }
-  }
-
-  .contact {
-    text-align: center;
-    margin: $common-padding 0;
-
-    .double-line {
-      margin: $common-padding auto;
-    }
-
-    p {
-      font-size: 0.9rem;
-    }
-
-    h3 {
-      padding: 0 $common-padding*3;
-      font-size: 1.1rem;
-    }
-  }
-
-  #personal-details {
-    input,
-    textarea {
-      display: block;
-      margin: $common-padding/5 auto;
-      padding: $common-padding/10;
-    }
-
-    textarea {
-      padding-right: $common-padding;
-    }
-
-    ::placeholder {
-      color: lightgrey;
-    }
-
-    button {
-      background-color: black;
-      border: none;
-      color: white;
-      font-size: 0.9rem;
-      padding: 6px;
-      margin-top: 0;
-    }
-
-    input[type=text],
-    input[type=email],
-    textarea {
-      width: 580px;
-    }
-  }
-
-  .slider {
-    display: block;
-    .slide {
-      img {
-        width: 300px;
-      }
-    }
-  }
-
-  .small-screen-slide {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 440px) and (max-width: 600px) {
-  .chef-img {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg");
-    height: 280px;
-    background-size: cover;
-  }
-
-  .menu-information {
-    border-bottom: 1px solid $text-color;
-    font-size: 1.2rem;
-  }
-
-  .title-container {
-    .title {
-      font-size: 1.5rem
-    }
-  }
-
-  #personal-details {
-    input[type=text],
-    input[type=email],
-    textarea {
-      width: 340px;
-    }
-  }
-}
